Fix branching display on mobile

--- a/app/javascript/packs/goodserviceApp/assets/stylesheets/app.scss
+++ b/app/javascript/packs/goodserviceApp/assets/stylesheets/app.scss
@@ -192,7 +192,7 @@ button.ui.slack-icon {
 }
 
 .branch-end {
-  height: 35px;
+  height: 100%;
   width: 30px;
   border-bottom-right-radius: 50%;
   display: block;
